Split file providers
Use `/api/vmod/*` endpoint to get version from `v.mod` file.
Use `/api/vpkg/*` endpoint to get version from `vpkg.json` file.
Pass owner and repo as paths.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "github": {
     "silent": true
-  }
+  },
+  "routes": [
+    { "src": "/api/vmod/(.*)", "dest": "/api/vmod/index.js" },
+    { "src": "/api/vpkg/(.*)", "dest": "/api/vpkg/index.js" }
+  ]
 }
