--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A custom endpoint to allow display a version of a V project from project files.",
   "private": true,
   "scripts": {
-    "lint": "eslint \"./api/**/*.js\""
+    "lint": "eslint \"./{api,page,src}/**/*.js\""
   },
   "author": "Alexey <alex.esprit@gmail.com>",
   "license": "MIT",
