--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"./{api,page,src}/**/*.js\"",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "check-format": "prettier --check ."
   },
   "author": "Alexey <alex.esprit@gmail.com>",
   "license": "MIT",
