--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint \"./{api,page,src}/**/*.js\"",
+    "test": "npx jest",
     "format": "prettier --write .",
     "check-format": "prettier --check ."
   },
@@ -16,6 +17,7 @@
   "devDependencies": {
     "eslint": "^7.17.0",
     "eslint-config-web-scrobbler": "^2.1.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "prettier-config-web-scrobbler": "^0.1.0",
